syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc FindOne(UserById) returns (UserResponse);
  rpc FindUser (FindUserRequest) returns (LoginUserResponse);
  rpc AddAddress(AddAddressRequest) returns (UserResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (UserResponse);
  rpc GetAddresses(GetAddressesRequest) returns (AddressesResponse);
  rpc DeleteAddress(DeleteAddressRequest) returns (UserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string profileImage = 8;
}

message UserById {
  string _id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string profileImage = 8;
  repeated Address addresses = 9;
}

message Address {
  string street = 1;
  string apartment = 2;
  string city = 3;
  string state = 4;
  string zipCode = 5;
  string country = 6;
  string label = 7;
}

message AddAddressRequest {
  string userId = 1;
  Address address = 2;
}

message UpdateAddressRequest {
  string userId = 1;
  Address address = 2;
  int32 addressIndex = 3;
}

message GetAddressesRequest {
  string userId = 1;
}

message AddressesResponse {
  repeated Address addresses = 1;
}

message DeleteAddressRequest {
  string userId = 1;
  int32 addressIndex = 2;
}

message LoginUserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string profileImage = 8;
  string password = 9;
  repeated Address addresses = 10;
}

message FindUserRequest {
   string email = 1;
}
